[feat] Dall-E api를 활용한 이미지 자동 생성
DALL-E 를 활용하여 조건에 맞는 이미지를 자동으로 생성하도록 하였다.

참고 자료: https://medium.com/twodigits/openai-image-generation-application-with-spring-boot-8ce2cd5c0789

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,10 @@ Temporary Items
 *.icloud
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij,java
+*.bin
+
+*.uniqueId0
+
+build/resources/main/application.properties
+
+src/main/resources/application.properties
